--- a/hareshchaudhary/assets/css/style.css
+++ b/hareshchaudhary/assets/css/style.css
@@ -95,11 +95,16 @@ nav li:hover{
     width: 80%;
     display: block;
 }
+.offcanvas ul{
+    display: flex;
+    flex-direction: column;
+}
 .offcanvas li{
     display: block;
     margin: 10px;
     text-align: center;
     padding: 10px;
+    width: 90%;
 }
 .offcanvas .link-slid{
     margin-top: 20px;
@@ -287,18 +292,18 @@ nav li:hover{
 }
 .dot-one{
     animation-name: color;
-    animation-duration: 4s;
+    animation-duration: 1s;
     animation-iteration-count: infinite;
 }
 .dot-two{
     animation-name: color;
-    animation-duration: 4s;
+    animation-duration: 1s;
     animation-iteration-count: infinite;
     animation-delay: 1s;
 }
 .dot-three{
     animation-name: color;
-    animation-duration: 4s;
+    animation-duration: 1s;
     animation-iteration-count: infinite;
     animation-delay: 2s;
 }
