--- a/hareshchaudhary/assets/css/style.css
+++ b/hareshchaudhary/assets/css/style.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap');
+
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: sans-serif;
+    font-family: "Roboto Slab", serif;
     font-size: 16px;
 }
 .flex{
