--- a/hareshchaudhary/assets/css/style.css
+++ b/hareshchaudhary/assets/css/style.css
@@ -412,7 +412,7 @@ margin-top: 36px;
             margin-left: 5px;
         }
  .section-six{
-    padding: 70px 0px;
+    padding: 70px 0px 30px 0px;
     background-color: rgb(248, 248, 250);
  }
  .section-six-heading{
@@ -431,7 +431,7 @@ margin-top: 36px;
     padding: 11px;
  }
  footer{
-    padding: 30px 0px;
+    padding: 0px  0px 30px 0px;
     background-color: rgb(248, 248, 250);
  }
  footer .navigation,ul,.icon{
@@ -484,12 +484,13 @@ box-shadow: 0px 0px 5px black;
     color: black;
 }
 .copy-right .p-2{
-    padding-left: 40px;
+    /* padding-left: 40px; */
     text-align: right;
 }
 .f-logo,.f-link,footer .icon{
     padding: 20px 0px;
 }
+
 /* midia */
 @media (min-width:0px){
     .header-btn{
@@ -556,6 +557,9 @@ box-shadow: 0px 0px 5px black;
     .copy-right {
         justify-content: center;
         padding-top: 10px;
+    }
+    .copy-right .p-1{
+        text-wrap: nowrap;
     }
     .copy-right .p-2{
         padding-top: 15px;
